--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                 <div id="buttons"></div>
         </div>
 
-
-
         <div class="row">
             <div class="col col-lg-12 col-md-8 col-sm-4">
                 <form id="gif-form">
@@ -28,7 +26,7 @@
                     <input class="input" type="text" id="gif-input">
                     <br>
                     <br>
-                    <input class="btn btn-danger" id="add-gif" type="submit" value="Submit">
+                    <input class="btn btn-success" id="add-gif" type="submit" value="Submit">
                 </form>
             </div>
         </div>
